syntax="proto3";

import "google/protobuf/empty.proto";
import "data_schema.proto";

package gateway;
option go_package="wartech-studio.com/monster-reacher/libraries/protobuf/gateway;gateway";

service Gateway {
    rpc Authentication(AuthenticationRequest) returns(AuthenticationResponse);
    rpc WartechRegister(WartechRegisterRequest) returns(WartechRegisterResponse);

    rpc GetProfileData(GetProfileDataRequest) returns(GetProfileDataResponse);
    rpc GetCharacterData(GetCharacterDataRequest) returns(GetCharacterDataResponse);

    rpc SetCharacterName(SetCharacterNameRequest) returns(google.protobuf.Empty);
    rpc SetCharacterMMR(SetCharacterMMRRequest) returns(google.protobuf.Empty);


    rpc LinkServiceToAccount(LinkServiceToAccountRequest) returns(google.protobuf.Empty);
    rpc IncrementCharacterEXP(IncrementCharacterEXPRequest) returns(google.protobuf.Empty);
    rpc AddToStorage(AddToStorageRequest) returns(google.protobuf.Empty);
}

message SetCharacterNameRequest {
    string token = 1;
    string name = 3;
}

message SetCharacterMMRRequest {
    string token = 1;
    int64 mmr = 3;
}

message AuthenticationRequest {
    string user = 1;
    string password = 2;
    string email = 3;
    string service_name = 4;
    string service_auth_code = 5;
}
message AuthenticationResponse {
    bool is_new = 1;
    string token = 2;
    string id = 3;
}

message WartechRegisterRequest {
    string username=1;
    string email=2;
    string password=3;
    string birthday=4;
}
message WartechRegisterResponse {
    bool is_success=1;
}

message GetProfileDataRequest {
    string token = 1;
    string id = 2;
}
message GetProfileDataResponse {
    data_schema.ProfileData data = 1;
}

message GetCharacterDataRequest {
    string token = 1;
    string id = 2;
}
message GetCharacterDataResponse {
    data_schema.CharacterData data = 1;
}

message LinkServiceToAccountRequest {
    string token = 1;
    string service_name = 2;
    string service_code = 3;
}

message IncrementCharacterEXPRequest {
    string token = 1;
    int64 exp = 2;
}

message AddToStorageRequest {
    string token = 1;
    int64 item = 2;
    int64 amount = 3;
}
